--- a/Sample/src/main/res/layout/activity_grid_sample.xml
+++ b/Sample/src/main/res/layout/activity_grid_sample.xml
@@ -2,7 +2,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <com.quentindommerc.superlistview.SuperGridview
+    <org.notlocalhost.superlistview.SuperGridview
             xmlns:superlistview="http://schemas.android.com/apk/res-auto"
             android:id="@+id/list"
             android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             superlistview:supergv__verticalSpacing="10dp"
             superlistview:supergv__horizontalSpacing="10dp"
             superlistview:superlv__scrollbarStyle="outsideOverlay" >
-    </com.quentindommerc.superlistview.SuperGridview>
+    </org.notlocalhost.superlistview.SuperGridview>
 
 
 </RelativeLayout>
