--- a/SuperListviewLibrary/src/main/res/layout/view_progress_gridview.xml
+++ b/SuperListviewLibrary/src/main/res/layout/view_progress_gridview.xml
@@ -13,7 +13,7 @@
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"/>
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <org.notlocalhost.superlistview.widget.SwipeRefreshLayout
             android:id="@+id/ptr_layout"
             android:layout_above="@id/more_progress"
             android:layout_width="match_parent"
@@ -21,11 +21,10 @@
 
         <GridView
                 android:id="@android:id/list"
-                android:visibility="invisible"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </org.notlocalhost.superlistview.widget.SwipeRefreshLayout>
 
     <ViewStub
             android:id="@+id/empty"
