--- a/SuperListviewLibrary/src/main/res/layout/view_progress_listview.xml
+++ b/SuperListviewLibrary/src/main/res/layout/view_progress_listview.xml
@@ -13,7 +13,7 @@
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"/>
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <org.notlocalhost.superlistview.widget.SwipeRefreshLayout
             android:id="@+id/ptr_layout"
             android:layout_above="@id/more_progress"
             android:layout_width="match_parent"
@@ -25,7 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </org.notlocalhost.superlistview.widget.SwipeRefreshLayout>
 
     <ViewStub
             android:id="@+id/empty"
