--- a/SuperListviewLibrary/src/main/res/layout/view_progress_header_arrow_text.xml
+++ b/SuperListviewLibrary/src/main/res/layout/view_progress_header_arrow_text.xml
@@ -12,4 +12,13 @@
         android:layout_marginBottom="10dp"
         android:src="@drawable/refresh_arrow"/>
 
+    <TextView
+        android:id="@+id/view_progress_text"
+        android:paddingLeft="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="9dp"
+        android:text="Pull to refresh.."/>
 </LinearLayout>
